syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 number = 1;
}

service CalculatorService {
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}